fixing firstPlayerFrame, continuing GUI implementation